--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/craigcorsi/Online-Writing-Journal#readme",
   "dependencies": {
-    "npm": "^6.1.0"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "mysql2": "^1.5.3",
+    "npm": "^6.1.0",
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.0.0"
   }
 }
