--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "homepage": "https://github.com/craigcorsi/Online-Writing-Journal#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mysql2": "^1.5.3",
     "npm": "^6.1.0",
