--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/craigcorsi/Online-Writing-Journal#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cookie-session": "^2.0.0-beta.3",
+    "cookie": "^0.3.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "lodash": "^4.17.10",
