--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.10",
     "mysql2": "^1.5.3",
     "npm": "^6.1.0",
+    "path": "^0.12.7",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   }
