--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "lodash": "^4.17.10",
+    "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "npm": "^6.1.0",
     "path": "^0.12.7",
