--- a/config/config.json
+++ b/config/config.json
@@ -17,10 +17,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "ves23667g15z1718",
+    "password": "vnbq5nnmb49azmxm",
+    "database": "n3016f643v71nm6i",
+    "host": "g8mh6ge01lu2z3n1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
